--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -4,7 +4,7 @@
   height: 415px;
   width: 752px;
   box-sizing: border-box;
-  overflow: auto;
+  border-radius: 6px 6px 6px 6px;
 }
 
 .side-filters {
@@ -18,6 +18,12 @@
 
 .main-calendar {
   width: 604px;
+  box-sizing: border-box;
+  border-radius: 0px 6px 6px 0px;
+  border-top: 1px solid var(--Neutral-Neutral-300, #e0e0e0);
+  border-right: 1px solid var(--Neutral-Neutral-300, #e0e0e0);
+  border-bottom: 1px solid var(--Neutral-Neutral-300, #e0e0e0);
+  background: #fff;
 }
 
 .date-text {
