--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -36,3 +36,38 @@
   line-height: 150%;
   letter-spacing: 0.15px;
 }
+
+.select-btn {
+  display: flex;
+  padding: 6px 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  color: #01579B;
+  font-family: "Roboto" sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+}
+
+.clean-btn {
+  display: flex;
+  padding: 6px 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  color: #424242;
+  font-family: "Roboto" sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+}
+.clean-btn:hover {
+  background: none;
+}
