--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,7 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+
 .Month-Select {
-  background-color: transparent;
+  background: none !important;
 }
 
+.selected-month {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5;
+  color: var(--neutral-neutral-800, #424242);
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%; /* 24px */
+  letter-spacing: 0.15px;
+}
 
 .MonthSelect-MenuListProps {
   display: flex;
@@ -14,27 +29,71 @@
   width: 56px;
   height: 36px;
   margin: 0px 6px;
+
   padding: 0px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+
+  color: var(--neutral-neutral-800, #424242);
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%; /* 24px */
+  letter-spacing: 0.15px;
+}
+
+.MonthSelect-MenuItem:active {
+  background-color: #424242;
+}
+
+.selected-year {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5;
+  color: var(--neutral-neutral-800, #424242);
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: "Open Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 150%; /* 24px */
+  letter-spacing: 0.15px;
 }
 
 .YearSelect-MenuListProps {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
 .YearSelect-MenuItem {
   width: 56px;
   height: 36px;
   margin: 0px 6px;
   padding: 0px;
   display: flex;
-  
+
   /* justify-content: center;
   flex-direction: column;
   align-items: center; */
+}
+
+.MenuList-paper {
+  
+  display: flex;
+  width: 300px;
+  height: 175px;
+  padding: 8px 2px 8px 0px;
+  align-items: center;
+  flex-shrink: 0;
+
+  border-radius: 4px;
+  background: var(--Neutral-White, #fff);
+
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.2),
+    0px 9px 10px 0px rgba(0, 0, 0, 0.14), 0px 5px 14px 0px rgba(0, 0, 0, 0.12);
 }
