--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,14 +8,14 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0.5;
-  color: var(--neutral-neutral-800, #424242);
-  font-feature-settings: "clig" off, "liga" off;
-  font-family: "Open Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 150%; /* 24px */
-  letter-spacing: 0.15px;
+  color: var(--neutral-neutral-800, #424242) !important;
+  font-feature-settings: "clig" off, "liga" off !important;
+  font-family: "Open Sans" !important;
+  font-size: 16px !important;
+  font-style: normal !important;
+  font-weight: 600 !important;
+  line-height: 150% !important; /* 24px */
+  letter-spacing: 0.15px !important;
 }
 
 .MonthSelect-MenuListProps {
@@ -36,14 +36,14 @@
   flex-direction: column;
   align-items: center;
 
-  color: var(--neutral-neutral-800, #424242);
-  font-feature-settings: "clig" off, "liga" off;
-  font-family: "Open Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 150%; /* 24px */
-  letter-spacing: 0.15px;
+  color: var(--neutral-neutral-800, #424242) !important;
+  font-feature-settings: "clig" off, "liga" off !important;
+  font-family: "Open Sans" !important;
+  font-size: 16px !important;
+  font-style: normal !important;
+  font-weight: 500 !important;
+  line-height: 150% !important; /* 24px */
+  letter-spacing: 0.15px !important;
 }
 
 .MonthSelect-MenuItem:active {
@@ -54,14 +54,14 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0.5;
-  color: var(--neutral-neutral-800, #424242);
-  font-feature-settings: "clig" off, "liga" off;
-  font-family: "Open Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 150%; /* 24px */
-  letter-spacing: 0.15px;
+  color: var(--neutral-neutral-800, #424242) !important;
+  font-feature-settings: "clig" off, "liga" off !important;
+  font-family: "Open Sans" !important;
+  font-size: 16px !important;
+  font-style: normal !important;
+  font-weight: 600 !important;
+  line-height: 150% !important; /* 24px */
+  letter-spacing: 0.15px !important;
 }
 
 .YearSelect-MenuListProps {
